--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,14 @@
   <section class="desktop">
     <ul class="desktop_items">
 
-      <li><a href="#"> <img src="/public/images/icon/1005.ico" alt=""> icon</a></li>
-      <li><a href="#"> <img src="/public/images/icon/1012.ico" alt=""> icon</a></li>
-      <li><a href="#"> <img src="/public/images/icon/1221.ico" alt=""> icon</a></li>
-      <li><a href="#"> <img src="/public/images/icon/1224.ico" alt=""> icon</a></li>
+      <li><a href="#"> <img src="images/icon/839.ico" alt=""><div><p>home</p></div></a></li>
+      <li><a href="#"> <img src="images/icon/1012.ico" alt=""><div><p>personal</p></div></a></li>
+      <li><a href="#"> <img src="images/icon/1221.ico" alt=""><div><p>website</p></div></a></li>
+      <li><a href="#"> <img src="images/icon/1224.ico" alt=""><div><p>sprint</p></div></a></li>
       
     </ul>
     
-    <div class="trash_can"><a href="#"> <img src="/public/images/icon/1224.ico" alt=""> icon</a></div>
+    <div class="trash_can"><a href="#"> <img src="images/icon/261.ico" alt=""></a></div>
 
     <div id="window_card" > <%- include('./partials/window', {window: ''}) %> </div>
 
@@ -24,15 +24,13 @@
  
   <footer class="taskbar">
     <nav>
-      <button class="start" popovertarget="start_menu">
-        start
-        <!-- <img src="/public/images/download.png" alt="start" sizes="" > -->
-       </button>
+      <button class="start" popovertarget="start_menu"><img src="images/pngwing.com.png" alt="windows logo" sizes="20" > <p>start</p></button>
       <div class="bar"></div>
       <div class="extra_icons">
         <ul>
-          <li><a href="#"><img src="" alt="">icon</a></li>
-          <li><a href="#"><img src="" alt=""> icon</a></li>
+          <li><a href="#"><img src="images/icon/1005.ico" alt=""></a></li>
+          <li><a href="#"><img src="images/icon/975.ico" alt=""> </a></li>
+          <li><a href="#"><img src="images/icon/952.ico" alt=""> </a></li>
         </ul>
       </div>
     </nav>
@@ -44,7 +42,6 @@
 
   
 </main>
-
 
 
 <%- include('./partials/foot') %>
