--- a/views/partials/window.ejs
+++ b/views/partials/window.ejs
@@ -1,7 +1,7 @@
 <section class="window">
     <%= window %>
     <header class="window_header">
-        <h2><%= data.name %></h2>
+        <h2><%= name %></h2>
 
         <ul>
             <li title="Min">min</li>
@@ -23,18 +23,18 @@
     </aside>
     <section>
         <div>
-            <div><%= data.avatar %></div>
-            <h3><%= data.name %></h3>
+            <div><img src="<%= avatar %>" alt="avatar"></div>
+            <h3><%= name %></h3>
         </div>
 
         <div class="info">
             <ul>
-                <li><%= data.name %></li>
-                <li><%= data.surname  %></li>
-                <li><a href=<%= data.website %>>Github</a></li>
-                <li><%= data.email %></li>
-                <li><%= data.phone_number %></li>
-                <li><%= data.squad_id %></li>
+                <li><%= name %></li>
+                <li><%= surname  %></li>
+                <li><a href=<%= website %>>Github</a></li>
+                <li><%= email %></li>
+                <li><%= phone_number %></li>
+                <li><%= squad_id %></li>
             </ul>
         </div>
     </section>
