--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,20 +6,21 @@
     <ul class="desktop_items">
 
       <li><a href="#"> <img src="images/icon/839.ico" alt=""><div><p>home</p></div></a></li>
-      <li><a href="#"> <img src="images/icon/1012.ico" alt=""><div><p>personal</p></div></a></li>
+      <li><button popovertarget="personal"> <img src="images/icon/1012.ico" alt=""><div><p>personal</p></div></button></li>
       <li><a href="https://open.spotify.com/playlist/5sreN3dVcxw56cSMTgTF49"> <img src="images/icon/1221.ico" alt=""><div><p>Music</p></div></a></li>
-      <li><a href="#"> <img src="images/icon/1224.ico" alt=""><div><p>sprint</p></div></a></li>
+      <li><a href="https://programma.fdnd.nl/data-driven-web/connect-your-tribe" target="self"> <img src="images/icon/1224.ico" alt=""><div><p>sprint</p></div></a></li>
       <li><a href="<%= website %>"> <img src="images/github.png" sizes="80" alt=""><div><p>github</p></div></a></li>
       
     </ul>
     
     <div class="trash_can"><a href="#"> <img src="images/icon/261.ico" alt=""></a></div>
 
-    <div id="window_personal" class="window_card" >
-       <%- include('./partials/window_head', {window_head: ''}) %> 
-       <%- include('./partials/window_aside_bottom', {window_a_b: '1'}) %> 
-       <%- include('./partials/window_personal', {window_personal: ''}) %> 
-    </div>
+         
+      <div popover id="personal" class="window_card" >
+        <%- include('./partials/window_head', {window_head: ''}) %> 
+        <%- include('./partials/window_aside_bottom', {window_a_b: ''}) %> 
+        <%- include('./partials/window_personal', {window_personal: ''}) %> 
+      </div>
 
     <menu popover id="start_menu ">menu</menu>
 
@@ -36,7 +37,10 @@
           <li><a href="#"><img src="images/icon/1005.ico" alt=""></a></li>
           <li><a href="#"><img src="images/icon/975.ico" alt=""> </a></li>
           <li><a href="#"><img src="images/icon/952.ico" alt=""> </a></li>
+          <li><span>11:11</span></li>
         </ul>
+
+        
       </div>
     </nav>
   </footer>
