--- a/views/partials/window_head.ejs
+++ b/views/partials/window_head.ejs
@@ -1,11 +1,11 @@
 <%= window_head %>
 <header class="window_header">
     <div class="blue_bar">
-        <span><%= name %></span>
+        <span>Personal</span>
         <ul>
-            <li title="Min">min</li>
-            <li title="Max">max</li>
-            <li title="exit"><a href="/">x</a></li>
+            <li title="Min">__</li>
+            <!-- <li title="Max"></li> -->
+            <li title="exit"><a href="/">✕</a></li>
         </ul>
     </div>
     <menu type="toolbar">
