--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,5 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FDND Visitekaartje</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <script src="./scripts/date.js" defer></script>
+  <script src="./scripts/general.js" defer></script>
 </head>
 <body>
