--- a/views/partials/window_aside_bottom.ejs
+++ b/views/partials/window_aside_bottom.ejs
@@ -1,17 +1,17 @@
 <aside class="file_explorer"> 
     <ul>
         <p>some file</p>
-        <li>icon<img src="/" alt=""><span>file</span></li>
-        <li>icon<img src="/" alt=""><span>file</span></li>
-        <li>icon<img src="/" alt=""><span>file</span></li>
+        <li><img src="images/icon/21.ico" alt=""><span>file</span></li>
+        <li><img src="images/icon/121.ico" alt=""><span>file</span></li>
+        <li><img src="/images/icon/423.ico" alt=""><span>file</span></li>
         
     </ul>
     <ul>
         <p>more file</p>
-        <li>icon<img src="/" alt=""><span>file</span></li>
-        <li>icon<img src="/" alt=""><span>file</span></li>
-        <li>icon<img src="/" alt=""><span>file</span></li>
-        <li>icon<img src="/" alt=""><span>file</span></li>
+        <li><img src="images/icon/1348.ico" alt=""><span>file</span></li>
+        <li><img src="images/icon/1084.ico" alt=""><span>file</span></li>
+        <li><img src="images/icon/1005.ico" alt=""><span>file</span></li>
+        <li><img src="/images/icon/975.ico" alt=""><span>file</span></li>
         
     </ul>
     
